# arphie

./: PROCESS.md  README.md  pyproject.toml
eval/: README.md  eval_questions.json  run_eval.py
personal-docs-qa/: .gitignore  PROCESS.md  README.md
personal-docs-qa/sample_docs/: README.md  ai_notes.md  budget.txt  coffee_recipe.txt  lease_notes.md  project.md  project_notes.md  travel.md
personal-docs-qa/src/personal_docs_qa/: __init__.py  answerer.py  chunker.py  cli.py  indexer.py  loaders.py  models.py  retriever.py  web.py
personal-docs-qa/src/personal_docs_qa/static/: app.js  styles.css
personal-docs-qa/tests/: test_answerer.py  test_indexer.py  test_loaders.py  test_retriever.py  test_scaffold.py
sample_docs/: lease_notes.md
src/personal_docs_qa/: answerer.py  chunker.py  cli.py  config.py  indexer.py  loaders.py  models.py  openai_answerer.py  openai_embeddings.py  retriever.py  source_format.py  web.py
src/personal_docs_qa/static/: app.js  index.html  styles.css
tests/: test_answerer.py  test_chunker.py  test_config.py  test_indexer.py  test_openai_answerer.py  test_openai_embeddings.py  test_retriever.py  test_scaffold.py  test_source_format.py  test_web.py
